rendered/envs/alpha/vmks/ingressroute-vmagent-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmagent-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`vmagent.ts.zebradil.dev`) || Host(`vmagent.junior.ts.zebradil.dev`)
      services:
        - name: vmagent-vmks
          port: http
